@@ -39,6 +39,7 @@ Other features
  * Recognise Soundcloud artist URLs as embeddable (Kiril Staikov)
  * Add ``WAGTAILDOCS_SERVE_METHOD`` setting to determine how document downloads will be linked to and served (Tobias McNulty, Matt Westcott)
  * Add ``WAGTAIL_MODERATION_ENABLED`` setting to enable / disable the 'Submit for Moderation' option (Jacob Topp-Mugglestone)
+ * Added settings to customise pagination page size for the Images admin area (Brian Whitton)
 
 
 Bug fixes
